eyedropper fixes and mouse (one more visual bug to fix), shift for rest of colors

--- a/theme/spriteeditor.less
+++ b/theme/spriteeditor.less
@@ -26,6 +26,11 @@
     z-index: 1001;
 }
 
+.sprite-editor-canvas.sprite-editor-eyedropper {
+    cursor: copy;
+    z-index: 1001;
+}
+
 .sprite-canvas-controls {
     z-index: 1000;
 }
